add docs swagger, api for update cart/checkout, and change query list cart to get only active cart
