# docs/open-api-specification.yaml
@@ -164,7 +164,27 @@ paths:
         401:
           $ref: "#/components/responses/401"
         500:
-          $ref: "#/components/responses/500"      
+          $ref: "#/components/responses/500"    
+  /cart/{id}:
+    put:
+      tags:
+        - Cart
+      summary: Update
+      security:
+        - authorize: []
+      parameters:
+        - $ref: "#/components/parameters/id"
+      responses:
+        200:
+          $ref: "#/components/responses/200"
+        400:
+          $ref: "#/components/responses/400"
+        401:
+          $ref: "#/components/responses/401"
+        404:
+          $ref: "#/components/responses/404"
+        500:
+          $ref: "#/components/responses/500"
 components:
   securitySchemes:
     authorize:
